SERVER-56869 Various fixes for use-after-free bugs in SBE